# cogno-anima

./: .gitignore  BENCHMARKS.md  CLAUDE.md  LOGGING.md  PYPI_SETUP.md  README.md  cognobench.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
cogno_anima/: __init__.py  errors.py  metakeys.py  prompts.py  types.py  utils.py  vocab.py
cogno_anima/llm/: __init__.py  anthropic_backend.py  bedrock_backend.py  cache.py  factory.py  fallback.py  gemini_backend.py  groq_backend.py  ollama.py  openai_backend.py  tool_parsing.py
cogno_anima/prompt_templates/noumeno/: system.txt
cogno_anima/routing/: __init__.py  attention.py  goal.py  intention.py
cogno_anima/security/: detector.py  pii.py
cogno_anima/stages/: __init__.py  base.py  drift.py  ego.py  id.py  ner.py  noumeno.py  superego.py
cogno_anima/tools/: __init__.py  base.py  composite.py
cogno_core/: __init__.py  errors.py  prompts.py  types.py  utils.py  vocab.py
cogno_core/llm/: __init__.py  anthropic_backend.py  base.py  bedrock_backend.py  cache.py  factory.py  fallback.py  gemini_backend.py  groq_backend.py  ollama.py  openai_backend.py  tool_parsing.py
cogno_core/routing/: __init__.py  attention.py  goal.py  intention.py
cogno_core/security/: detector.py  pii.py
cogno_core/stages/: __init__.py  base.py  drift.py  ego.py  id.py  ner.py  noumeno.py  superego.py
cogno_core/tools/: __init__.py  base.py
cognobench/: BOOKKEEPER_BENCH_RESULTS.md  CLAUDE.md  CONVERSATION_BENCH_RESULTS.md  EGO_BENCH_RESULTS.md  ID_BENCH_RESULTS.md  SUPEREGO_BENCH_RESULTS.md  __init__.py  bookkeeper_cases.py  conversation_cases.py  dimensions.py  drift_cases.py  ego_cases.py  harness.py  id_cases.py  ner_cases.py  noumeno_cases.py  pipeline.py  report.py  runner.py  superego_cases.py  types.py
docs/: ACT_CONFIRM_READONLY.md  HOST_INTEGRATION.md
examples/: README.md  host_min.py  quickstart_60s.py
prompts/ner/: system.txt  user.txt
prompts/noumeno/: user.txt
scripts/: calibrate_drift.py  publish_all.sh
tests/: conftest.py
tests/integration/: test_cloud_backends.py  test_composite.py  test_e2e_pipeline.py  test_ego.py  test_id.py  test_ner.py  test_noumeno.py  test_superego.py
tests/unit/: test_attention_filter.py  test_bookkeeper_bench_smoke.py  test_cloud_backends.py  test_cloud_backends_providers.py  test_cognobench_signals.py  test_cognobench_smoke.py  test_composite.py  test_drift.py  test_e2e_pipeline.py  test_ego.py  test_ego_types.py  test_goal_manager.py  test_id.py  test_id_types.py  test_intention_tracker.py  test_ner.py  test_ner_anaphora.py  test_noumeno.py  test_parsers_property.py  test_pii_detector.py  test_pii_dob.py  test_pipeline.py  test_providers.py  test_superego.py  test_tool_parsing.py
