[project]
name = "cogno-anima"
version = "0.1.0"
description = "Infrastructure-agnostic cognitive pipeline core (NOUMENO/NER/ID/EGO/SUPEREGO + Drift)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sudoers AI" }]
keywords = ["llm", "nlp", "cognitive-architecture", "agents", "function-calling", "pii", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "langdetect>=1.0.9",
    "httpx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-core"
Repository = "https://github.com/sudoers-ai/cogno-core"
Issues = "https://github.com/sudoers-ai/cogno-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.8",
]
# Cloud LLM backends — each SDK is lazy-imported, so install only what you use.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
groq = ["groq>=0.9"]
gemini = ["google-genai>=0.3"]
bedrock = ["boto3>=1.34"]
llm = ["openai>=1.0", "anthropic>=0.34", "groq>=0.9", "google-genai>=0.3", "boto3>=1.34"]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_anima*"]

[tool.pytest.ini_options]
# The whole suite runs on pytest-asyncio (a declared dev dependency).
# asyncio_mode = "auto" means every `async def test_*` is awaited without a
# per-test marker, keeping the suite consistent and independent of `anyio`
# (which is only present transitively via httpx).
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# Default ruleset (pyflakes + core pycodestyle). Kept lean on purpose — the
# CI gate should catch real defects (unused imports, undefined names, syntax),
# not enforce cosmetic style churn.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # langdetect/httpx ship partial or no stubs
# Type-check the library only; the prompt-driven parsing has many dynamic
# `data.get(...)` accesses, so we keep this pragmatic rather than strict.
files = ["cogno_anima"]
warn_unused_ignores = true
