[project]
name = "cogno-anima"
version = "0.1.0"
description = "Infrastructure-agnostic cognitive pipeline core (NOUMENO/NER/ID/EGO/SUPEREGO + Drift)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["llm", "nlp", "cognitive-architecture", "agents", "function-calling", "pii", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "langdetect>=1.0.9",
    # Model transport (LLM/embedding backends, factory, fallback) lives in
    # cogno-synapse; it brings httpx + cogno-homeo transitively.
    "cogno-synapse",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-anima"
Repository = "https://github.com/sudoers-ai/cogno-anima"
Issues = "https://github.com/sudoers-ai/cogno-anima/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.8",
]
# Cloud LLM backends moved to cogno-synapse; this convenience extra pulls them
# all in (install a single provider with e.g. `pip install "cogno-synapse[openai]"`).
llm = ["cogno-synapse[llm]"]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_anima*"]

[tool.setuptools.package-data]
# Ship the NOUMENO/NER prompt templates inside the wheel.
cogno_anima = ["prompt_templates/**/*.txt"]

[tool.pytest.ini_options]
# The whole suite runs on pytest-asyncio (a declared dev dependency).
# asyncio_mode = "auto" means every `async def test_*` is awaited without a
# per-test marker, keeping the suite consistent and independent of `anyio`
# (which is only present transitively via httpx).
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# Default ruleset (pyflakes + core pycodestyle). Kept lean on purpose — the
# CI gate should catch real defects (unused imports, undefined names, syntax),
# not enforce cosmetic style churn.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # langdetect/httpx ship partial or no stubs
# Type-check the library only; the prompt-driven parsing has many dynamic
# `data.get(...)` accesses, so we keep this pragmatic rather than strict.
files = ["cogno_anima"]
warn_unused_ignores = true
